Aufgabe 1.1 komplett gemacht

--- a/index.html
+++ b/index.html
@@ -7,6 +7,38 @@
     <title>Website-Selbstvorstellung</title>
 </head>
 <body>
-    
+    <h1>Selbstportrait - Benjamin Maier</h1>
+    <h2>Das bin ich:</h2>
+    <img src="Portrait-Benjamin_Maier.jpg" alt="Portraitfoto Benjamin Maier" width="300px">
+    <h2>Über mich:</h2>
+    <p>Ich bin 18 Jahre alt und wohne in Villingen-Schwenningen.</p>
+    <p>Die Medienwelt faszinierte mich schon immer, weshalb ich auch in meiner Freizeit viel mit Digitalen Medien zu tun habe.</p>
+    <p>Am spannendsten fand ich schon immer die <i>Filmproduktion</i>, weshalb ich mich vor kurzem mit meinem besten Freund selbstständig machte:</p>
+    <p>Unsere Firma heißt <a href="https://www.everland-media.de">Everland Media</a>.</p>
+    <p>Mehr über mein Studium findest du <a href="#studiumsinfo">hier.</a></p>
+    <h2>Fülltext:</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti culpa deleniti fugiat ipsa vel consequatur, nesciunt repellat dolores cum. At voluptates sit tenetur! Fugiat dolores corrupti repudiandae eaque corporis atque?
+    Eveniet nisi quibusdam quam excepturi illo at numquam molestiae vero. Sapiente nemo earum enim magnam neque sequi eveniet nobis tempore minus, illo, quae vitae adipisci ipsa possimus, voluptate exercitationem illum.
+    Adipisci, doloribus. In eos, adipisci sunt facilis odit rerum libero suscipit dicta nemo voluptate accusamus veniam placeat quo quod sed corporis illum molestiae! Distinctio recusandae culpa, autem non eaque quis!
+    Necessitatibus vel odio minima quisquam? Saepe, eaque fugit! Minus sed sit voluptatum, numquam molestias quasi blanditiis nesciunt sint culpa ipsum tempore illo eaque asperiores dignissimos modi incidunt adipisci laborum nihil.
+    Tempora officiis quam praesentium ipsam optio. Dignissimos unde veniam repellat corporis ipsum. Aperiam expedita sequi est tempore voluptatibus consectetur ut fugit commodi, nam ratione beatae, cum vero. Labore, tenetur a?
+    Dolores tempore id similique facere voluptate hic dignissimos velit nobis magni delectus culpa maiores corporis aliquam quae est vel quisquam, nihil earum, non voluptas pariatur ipsa ratione eveniet sint! Harum!
+    Dolorum rerum, obcaecati illo quae sapiente inventore, assumenda voluptas perspiciatis nam, incidunt fuga labore tempore voluptates quia libero praesentium deleniti reiciendis mollitia. Repudiandae dolorem iusto, quaerat fuga excepturi nulla libero!
+    Beatae odio autem mollitia, soluta vitae est, corporis repellendus temporibus facilis dolore exercitationem. Possimus, qui! Fugit animi odio eum sed quia, beatae architecto, consectetur placeat deleniti cupiditate doloremque commodi eos?
+    Nihil, numquam. Voluptates eveniet quo ut aperiam, accusantium culpa dolorem quam ab mollitia, debitis, repellendus blanditiis perspiciatis repellat maxime nihil! In reprehenderit voluptates, molestiae asperiores sint vel beatae quos et?
+    Maxime neque adipisci natus architecto id quasi possimus fuga atque cum cupiditate autem quaerat temporibus eum quos labore iure quod molestiae ratione odio quo, dicta voluptate praesentium unde. Ex, corrupti!
+    Pariatur earum deserunt autem nobis accusantium a temporibus facere recusandae, ex dolor inventore. Laborum, magnam, veritatis labore ipsam voluptatem a officiis vero distinctio quia numquam tempora, laudantium quae id aspernatur.
+    Voluptatum, porro quidem! Odit expedita suscipit velit perspiciatis quos, odio blanditiis aliquid, voluptatibus ea, incidunt numquam laboriosam itaque est dolores rem ipsam nostrum. Voluptates harum dignissimos ut cumque, labore quaerat.
+    Asperiores itaque, distinctio alias ad fugit voluptatibus delectus fugiat aperiam saepe beatae error mollitia dolor numquam magni eos ex sequi qui laudantium vel blanditiis deleniti eligendi minus non? Officia, magnam.
+    Laboriosam debitis obcaecati sunt repellendus cumque, assumenda reiciendis beatae maiores voluptatibus ut. Nobis explicabo dolorum libero adipisci autem ipsum tempora ex quas aliquam! Aut, saepe quaerat explicabo assumenda voluptatum adipisci!
+    Quo nobis cumque temporibus odit, repellat consequatur pariatur cupiditate! Harum nulla velit molestiae aliquam rem, mollitia dignissimos assumenda dolor architecto quaerat ea autem minus earum commodi consequatur quibusdam officiis impedit!
+    Excepturi animi soluta consequatur ut enim aperiam deserunt laboriosam quae a perspiciatis, obcaecati ex quidem atque. Incidunt distinctio sed, adipisci impedit ex aut numquam, illum asperiores repellendus doloribus, ut fugit?
+    Sunt totam, labore dicta similique assumenda ut sit autem, ab neque debitis dolorum voluptatum voluptatem. Amet, voluptate, porro consectetur explicabo dolores consequuntur ea velit odit omnis consequatur ad repellat nihil.
+    Magni nulla animi alias. Delectus exercitationem mollitia est, molestiae nulla quia fugit quae laboriosam unde reiciendis, maxime asperiores a similique eos, sapiente quibusdam. Odio, sunt ipsum obcaecati autem assumenda error!
+    Quaerat similique at aliquam voluptas modi aliquid maiores, voluptate sunt laboriosam fugit quos dolore natus tempora ipsam eos voluptates! Consequuntur nesciunt unde facilis odit, non officiis perferendis aliquid nemo modi.
+    Earum, beatae omnis? Earum, ipsa aperiam! Omnis eveniet ipsam esse adipisci perferendis qui rerum, nisi iusto deleniti eum odit recusandae magnam quis sint tempore placeat vero! Ratione veritatis accusamus dolor?</p>
+    <h2 id="studiumsinfo">Über mein Studium:</h2>
+    <p>Ich schloss 2020 mein Abitur in Villingen-Schwenningen ab und studiere seither OnlineMedien an der HFU.</p>
+    <p>Trotz der Online-Umstände bin ich bisher zufrieden mit meiner Wahl des Studiengangs.</p>
 </body>
 </html>
