Aufgabe 1.3 fertig gemacht und mit W3-Validator überprüft (keine Fehler mehr vorhanden)

--- a/aufgabe1.3/kontakt.html
+++ b/aufgabe1.3/kontakt.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <header>
-        <nav id="navigation">
-            <p>
-        <a href="index.html">Mein Portfolio</a> |
-        <a href="ueber-mich.html">Über mich</a> |
-        <a id="aktuelle_kontakt" href="kontakt.html">Kontakt</a>
-    </p>
-    </nav>
-    <a href="https://www.instagram.com/itsbennymaier/"><img class="instagram" src="../aufgabe1.3/Medien/Instagram.svg" width="30" alt="Instagram-Symbol"></a>
+        <nav>
+            <div id="navigation">
+                    <a class="navigation" href="index.html">Mein Portfolio</a> |
+                    <a class="navigation" href="ueber-mich.html">Über mich</a> |
+                    <a class="navigation" id="aktuelle_kontakt" href="kontakt.html">Kontakt</a>
+                <div id="instagram"><a href="https://www.instagram.com/itsbennymaier/"><img
+                            src="../aufgabe1.3/Medien/Instagram.svg" alt="Instagram-Symbol"></a>
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
         <h1>Kontakt:</h1>
@@ -48,7 +50,7 @@
                 <input type="text" name="name" placeholder="Email-Adresse">
             </fieldset>
             <fieldset class="kontaktformular">
-                <input id="nachrichtenfenster" type="textarea" name="name" placeholder="Nachricht">
+                <input id="nachrichtenfenster" type="text" name="name" placeholder="Nachricht">
             </fieldset>
             <fieldset class="kontaktformular">
                 <button>
