--- a/aufgabe1.3/ueber-mich.html
+++ b/aufgabe1.3/ueber-mich.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,21 +8,24 @@
     <title>Über mich</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-        <nav id="navigation">
-            <p>
-        <a href="index.html">Mein Portfolio</a> |
-        <a id="aktuelle_uebermich" href="ueber-mich.html">Über mich</a> |
-        <a href="kontakt.html">Kontakt</a>
-    </p>
-    </nav>
-    <a href="https://www.instagram.com/itsbennymaier/"><img class="instagram" src="../aufgabe1.3/Medien/Instagram.svg" width="30" alt="Instagram-Symbol"></a>
+        <nav>
+            <div id="navigation">
+                    <a class="navigation" href="index.html">Mein Portfolio</a> |
+                    <a class="navigation" id="aktuelle_uebermich" href="ueber-mich.html">Über mich</a> |
+                    <a class="navigation" href="kontakt.html">Kontakt</a>
+                <div id="instagram"><a href="https://www.instagram.com/itsbennymaier/"><img
+                            src="../aufgabe1.3/Medien/Instagram.svg" alt="Instagram-Symbol"></a>
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
         <h1>Über mich:</h1>
         <p>Auf dieser Seite erfahren Sie mehr über <strong>meine Person</strong>.</p>
-        <p>Lesen Sie sich gerne durch!</p>   
+        <p>Lesen Sie sich gerne durch!</p>
         <img id="portrait" src="../aufgabe1.3/Medien/Portrait.jpg" alt="Portrait Benjamin Maier">
         <h2>Allgemein:</h2>
         <ol>
@@ -37,12 +41,14 @@
         <p>Gleich nach dem Abschluss bewarb ich mich um einen Studienplatz an der HFU.</p>
         <p>Ich wurde nach kurzer Zeit angenommen und studiere seither <q>OnlineMedien</q>.</p>
         <h3>Erfahrungen:</h3>
-        <p>Schon seit langer Zeit faszinierte mich die Medienwelt sehr. Vor allem die Hintergründe und Strategien derer Apps kennenzulernen,</p>
+        <p>Schon seit langer Zeit faszinierte mich die Medienwelt sehr. Vor allem die Hintergründe und Strategien derer
+            Apps kennenzulernen,</p>
         <p>welche wir tagtäglich benutzen reizte mich sehr.</p>
         <p>Dementsprechend schlug ich auch meinen weiteren Werdegang an der <b>HFU</b> ein.</p>
         <p>Privat beschäftige ich mich schon sehr lange mit allen Arten der Medienproduktion und habe von Fotografie</p>
         <p>über Grafikdesign bis Webentwicklung nahezu ales ausprobiert.</p>
-        <p>Da mich die Filmproduktion schon immer am meisten faszinierte und ich dort schon einige schöne Erfahrungen mit einem guten Freund sammeln durfte,</p>
+        <p>Da mich die Filmproduktion schon immer am meisten faszinierte und ich dort schon einige schöne Erfahrungen
+            mit einem guten Freund sammeln durfte,</p>
         <p>entschlossen wir uns Anfang diesen Jahres, damit eine professionellere Richtung einzuschlagen.</p>
         <p>Somit gründeten wir unsere eigene Firma <a href="https://www.everland-media.de">Everland Media</a>.</p>
         <p>In Zukunft wollen wir darüber Werbe- und Imagefilme für Firmen und Vereine produzieren</p>
@@ -53,4 +59,5 @@
 
     </footer>
 </body>
+
 </html>
