--- a/aufgabe1.3/index.html
+++ b/aufgabe1.3/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,21 +8,25 @@
     <title>Mein Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-    <nav id="navigation">
-        <p>
-        <a id="aktuelle_index" href="index.html">Mein Portfolio</a> |
-        <a href="ueber-mich.html">Über mich</a> |
-        <a href="kontakt.html">Kontakt</a>
-    </p>
-    </nav>
-    <a href="https://www.instagram.com/itsbennymaier/"><img class="instagram" src="../aufgabe1.3/Medien/Instagram.svg" width="30" alt="Instagram-Symbol"></a>
+        <nav>
+            <div id="navigation">
+                    <a class="navigation" id="aktuelle_index" href="index.html">Mein Portfolio</a> |
+                    <a class="navigation" href="ueber-mich.html">Über mich</a> |
+                    <a class="navigation" href="kontakt.html">Kontakt</a>
+                <div id="instagram"><a href="https://www.instagram.com/itsbennymaier/"><img
+                            src="../aufgabe1.3/Medien/Instagram.svg" alt="Instagram-Symbol"></a>
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
         <h1 id="seitenanfang">Herzlich Willkommen!</h1>
         <h1>Mein Portfolio:</h1>
-        <p>Auf dieser Seite finden Sie meine <strong>Referenzen</strong>. Darunter sind Bilder, Videos und ein Song der mir gefällt.</p>
+        <p>Auf dieser Seite finden Sie meine <strong>Referenzen</strong>. Darunter sind Bilder, Videos und ein Song der
+            mir gefällt.</p>
         <p>Nur zur Information, die Referenzen sind:</p>
         <ol>
             <li class="liste">alt</li>
@@ -29,7 +34,7 @@
             <li class="liste">nicht die besten</li>
         </ol>
         <p>Da sie aber am <em>schnellsten</em> greifbar waren und die Dateigröße aufgrund der </p>
-        <p><q>geringeren Qualität</q> auch schon ok ist, sehen Sie diese hier.</p></p>
+        <p><q>geringeren Qualität</q> auch schon ok ist, sehen Sie diese hier.</p>
         <h2>Meine Fotoprojekte:</h2>
         <img id="Referenzbilder" src="../aufgabe1.3/Medien/Referenzbilder.png" alt="Verschiedene Referenzbilder">
         <h2>Ausschnitt eines älteren Filmprojekts:</h2>
@@ -41,9 +46,10 @@
             <source src="../aufgabe1.3/Medien/song.wav" type="audio/wav">
         </audio>
         <p><a href="#seitenanfang">Hier gehts zurück nach oben</a></p>
-        </main>
+    </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
