Aufgabe 1.3 überarbeitet für die Nachkontrolle

--- a/aufgabe1.3/index.html
+++ b/aufgabe1.3/index.html
@@ -10,17 +10,17 @@
 </head>
 
 <body>
+    <nav class="sticky-nav">
+        <div id="sticky-nav-content">
+                <a id="aktuelle_index" href="index.html">Mein Portfolio</a> |
+                <a href="ueber-mich.html">Über mich</a> |
+                <a href="kontakt.html">Kontakt</a>
+        </div>
+    </nav>
+    <div id="instagram"><a href="https://www.instagram.com/itsbennymaier/"><img
+        src="../aufgabe1.3/Medien/Instagram.svg" alt="Instagram-Symbol"></a>
+</div>
     <header>
-        <nav>
-            <div id="navigation">
-                    <a class="navigation" id="aktuelle_index" href="index.html">Mein Portfolio</a> |
-                    <a class="navigation" href="ueber-mich.html">Über mich</a> |
-                    <a class="navigation" href="kontakt.html">Kontakt</a>
-                <div id="instagram"><a href="https://www.instagram.com/itsbennymaier/"><img
-                            src="../aufgabe1.3/Medien/Instagram.svg" alt="Instagram-Symbol"></a>
-                </div>
-            </div>
-        </nav>
     </header>
     <main>
         <h1 id="seitenanfang">Herzlich Willkommen!</h1>
