--- a/aufgabe1.3/kontakt.html
+++ b/aufgabe1.3/kontakt.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav class="sticky-nav">
+        <div id="sticky-nav-content">
+                <a href="index.html">Mein Portfolio</a> |
+                <a href="ueber-mich.html">Über mich</a> |
+                <a id="aktuelle_kontakt" href="kontakt.html">Kontakt</a>
+        </div>
+    </nav>
+    <div id="instagram"><a href="https://www.instagram.com/itsbennymaier/"><img
+        src="../aufgabe1.3/Medien/Instagram.svg" alt="Instagram-Symbol"></a>
+</div>
     <header>
-        <nav>
-            <div id="navigation">
-                    <a class="navigation" href="index.html">Mein Portfolio</a> |
-                    <a class="navigation" href="ueber-mich.html">Über mich</a> |
-                    <a class="navigation" id="aktuelle_kontakt" href="kontakt.html">Kontakt</a>
-                <div id="instagram"><a href="https://www.instagram.com/itsbennymaier/"><img
-                            src="../aufgabe1.3/Medien/Instagram.svg" alt="Instagram-Symbol"></a>
-                </div>
-            </div>
-        </nav>
     </header>
     <main>
         <h1>Kontakt:</h1>
