Aufgabe 1.4 fertig gemacht (kann hochgeladen werden)
Responsive Design gemacht, Aufgabe ist jetzt komplett fertig

--- a/aufgabe1.4/index.html
+++ b/aufgabe1.4/index.html
@@ -38,7 +38,7 @@
         <h2>Meine Fotoprojekte:</h2>
         <img id="Referenzbilder" src="../aufgabe1.3/Medien/Referenzbilder.png" alt="Verschiedene Referenzbilder">
         <h2>Ausschnitt eines älteren Filmprojekts:</h2>
-        <video class="media" width="700" controls preload="auto">
+        <video class="media" id="video1" width="700" controls preload="auto">
             <source src="../aufgabe1.3/Medien/video.mp4" type="video/mp4">
         </video>
         <h2>Ein Song, welchen ich noch in den Dateien gefunden habe:</h2>
