--- a/aufgabe1.4/kontakt.html
+++ b/aufgabe1.4/kontakt.html
@@ -21,7 +21,7 @@
     <header>
     </header>
     <main>
-        <h1>Kontakt:</h1>
+        <h1 id="seitenanfang3">Kontakt:</h1>
         <p>Hier finden sie <q>Kontaktoptionen</q>, welche Sie mir gegenüber nutzen können.</p>
         <p>Machen Sie gerne Gebrauch davon!</p>
         <img id="briefumschlag" src="../aufgabe1.3/Medien/kontakt-brief.svg" alt="Briefumschlag-als-Kontaktsymbol">
