--- a/aufgabe1.4/ueber-mich.html
+++ b/aufgabe1.4/ueber-mich.html
@@ -23,7 +23,7 @@
     <header>
     </header>
     <main>
-        <h1>Über mich:</h1>
+        <h1 id="seitenanfang2">Über mich:</h1>
         <p>Auf dieser Seite erfahren Sie mehr über <strong>meine Person</strong>.</p>
         <p>Lesen Sie sich gerne durch!</p>
         <img id="portrait" src="../aufgabe1.3/Medien/Portrait.jpg" alt="Portrait Benjamin Maier">
