--- a/aufgabe2.2/index.html
+++ b/aufgabe2.2/index.html
@@ -8,6 +8,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <canvas id="myCanvas1" width="500" height="400"></canvas>
+    <canvas id="myCanvas2" width="400" height="400"></canvas>
 </body>
 </html>
