--- a/aufgabe2.3/index.html
+++ b/aufgabe2.3/index.html
@@ -8,7 +8,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <button id="addButton">add</button>
-    <button id="clearButton">clear</button>
+    <!--<button id="addButton">add</button>
+    <button id="clearButton">clear</button>-->
 </body>
 </html>
