--- a/aufgabe2.4/index2.html
+++ b/aufgabe2.4/index2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="site1">Wheels</title>
+    <title id="site2">Poles</title>
     <script src="data.js" defer></script>
     <script src="interfaces.js" defer></script>
     <script src="script.js" defer></script>
@@ -17,7 +17,7 @@
     <div class="header">
         <h1>Herzlichen Willkommen im Einrad-Shop!</h1>
         <h2>Ihr Onlineshop für individuelle Einräder</h2>
-        <h3>Bitte wählen Sie immer eine der untenstehenden Räder-Optionen für Ihr Custom-Made-Einrad aus:</h3>
+        <h3>Bitte wählen Sie immer eine der untenstehenden Stangen-Optionen für Ihr Custom-Made-Einrad aus:</h3>
     </div>
 </body>
 
