--- a/aufgabe2.4/index3.html
+++ b/aufgabe2.4/index3.html
@@ -8,7 +8,7 @@
     <title id="site3">Saddles</title>
     <script src="data.js" defer></script>
     <script src="interfaces.js" defer></script>
-    <script src="script.js" defer></script>
+    <script src="script2.js" defer></script>
     <link rel="stylesheet" href="style.css">
 
 </head>
