--- a/aufgabe2.5/index4.html
+++ b/aufgabe2.5/index4.html
@@ -19,6 +19,7 @@
         <h2>Ihr Onlineshop für individuelle Einräder</h2>
         <h3>Wir haben Ihre Wunschkonfiguration für Sie zusammengestellt:</h3>
     </div>
+    <p id="message"></p>
 </body>
 
 </html>
