Löschen-Feld hinzugefügt

--- a/aufgabe3.4_neu/index.html
+++ b/aufgabe3.4_neu/index.html
@@ -39,6 +39,8 @@
 
     <button id="showButton" type="button">Anzeigen</button>
 
+    <button id="deleteButton" type="button">Löschen</button>
+
     <h3>Erfasste Studenten:</h3>
     <div id=dataOutput></div>
 </body>
