Formular leeren gemacht und alle Bugs gefixt

--- a/aufgabe3.4_neu/index.html
+++ b/aufgabe3.4_neu/index.html
@@ -15,7 +15,7 @@
     <h1>Die HFU-Studenten-Datenbank</h1>
     <h2>Tragen Sie Ihre Daten in das folgende Formular ein:</h2>
 
-    <form name="Registrierung">
+    <form id="registration">
         <label for="lastname">Name:</label>
         <br>
         <input type="text" name="lastname" id="lastname">
@@ -38,8 +38,6 @@
     <button id="sendButton" type="button">Speichern</button>
 
     <button id="showButton" type="button">Anzeigen</button>
-
-    <button id="deleteButton" type="button">Löschen</button>
 
     <h3>Erfasste Studenten:</h3>
     <div id=dataOutput></div>
