--- a/aufgabe1.4/index.html
+++ b/aufgabe1.4/index.html
@@ -17,7 +17,7 @@
             <a href="kontakt.html">Kontakt</a>
         </div>
     </nav>
-    <div id="instagram"><a href="https://www.instagram.com/itsbennymaier/"><img src="../aufgabe1.3/Medien/Instagram.svg"
+    <a id="home-button" href="https://www.instagram.com/itsbennymaier/"><img src="../aufgabe1.3/Medien/Instagram.svg"
                 alt="Instagram-Symbol"></a>
     </div>
     <header>
