--- a/Endabgabe/html/game.html
+++ b/Endabgabe/html/game.html
@@ -7,21 +7,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/style.css" rel="stylesheet" type="text/css" media="screen" />
     <!--Die folgenden Zeile ist Fremd-Code und stammt von: https://www.w3schools.com/css/css_font_google.asp-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Darker+Grotesque"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Darker+Grotesque" />
     <!--Ende Fremd-Code-->
     <script src="../client/client.js" defer></script>
     <title>Game</title>
 </head>
 
 <body id="html-game">
-    <a href="index.html"><img id="home-button" src="../media/house.svg"
-        alt="Home-Button"></a>
-    <h1>Let's Memory!</h1>
-    <h2>Finde schnellstmöglich alle Karten-Paare!</h2>
-    <p>Nach erfolgreichem Abschluss des Spiels erfährst du deinen Score auf der Folgeseite.</p>
+    <a href="index.html"><img id="home-button" src="../media/house.svg" alt="Home-Button"></a>
+    <h1 id="h1Game">Let's Memory!</h1>
+    <h2 id="h2Game">Finde schnellstmöglich alle Karten-Paare!</h2>
 
-
+    <table class="pictureTable">
+        <tr>
+            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+        </tr>
+        <tr>
+            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+        </tr>
+        <tr>
+            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+        </tr>
+        <tr>
+            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+        </tr>
+    </table>
 </body>
 
 </html>
