Spiel-Seite größtenteils gemacht

--- a/Endabgabe/html/admin.html
+++ b/Endabgabe/html/admin.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/style.css" rel="stylesheet" type="text/css" media="screen" />
     <!--Die folgenden Zeile ist Fremd-Code und stammt von: https://www.w3schools.com/css/css_font_google.asp-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Darker+Grotesque"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Darker+Grotesque" />
     <!--Ende Fremd-Code-->
     <script src="../client/client.js" defer></script>
     <title id="admin_html">Admin-Bereich</title>
@@ -17,10 +17,13 @@
 <body id="html-admin">
     <a href="index.html"><img id="home-button" src="../media/house.svg"
         alt="Home-Button"></a>
+    <!--<a href="index.html"><object id="home-button" data="../media/house.svg" alt="Home-Button" type="image/svg+xml"></a>-->
+
     <h1>Admin-Bereich</h1>
     <h2>Für die Verwaltung der Karten-Bilder:</h2>
     <p>Du kannst Bilder aus der Datenbank löschen, oder neue mit einem URL-Link hinzufügen.</p>
-    <p>Ein GIS-Meme für zwischendurch findest du <a is="memeLink" href="https://github.com/benjamin-maier/GIS-SoSe2021">hier</a>.</p>
+    <p>Ein GIS-Meme für zwischendurch findest du <a is="memeLink"
+            href="https://github.com/benjamin-maier/GIS-SoSe2021">hier</a>.</p>
 
     <form id="addPicture">
         <label for="pictureOrigin">URL:</label>
