--- a/Endabgabe/html/game.html
+++ b/Endabgabe/html/game.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Darker+Grotesque" />
     <!--Ende Fremd-Code-->
-    <script src="../client/client.js" defer></script>
-    <title>Game</title>
+    <script src="../client/game.js" defer></script>
+    <title id="game-html">Game</title>
 </head>
 
 <body id="html-game">
@@ -21,28 +21,28 @@
 
     <table class="pictureTable">
         <tr>
-            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
-            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
-            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
-            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td id="place1"><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td id="place2"><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td id="place3"><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td id="place4"><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
         </tr>
         <tr>
-            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
-            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
-            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
-            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td id="place5"><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td id="place6"><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td id="place7"><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td id="place8"><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
         </tr>
         <tr>
-            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
-            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
-            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
-            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td id="place9"><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td id="place10"><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td id="place11"><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td id="place12"><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
         </tr>
         <tr>
-            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
-            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
-            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
-            <td><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td id="place13"><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td id="place14"><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td id="place15"><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
+            <td id="place16"><img class="picture" src="../media/card_back.jpg" alt="Kartenrückseite"></td>
         </tr>
     </table>
 </body>
