--- a/Endabgabe/html/registration.html
+++ b/Endabgabe/html/registration.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Darker+Grotesque"/>
     <!--Ende Fremd-Code-->
     <script src="../client/client.js" defer></script>
-    <title>Registrierung</title>
+    <title id="registration-html">Registrierung</title>
 </head>
 
 <body id="html-registration">
@@ -27,9 +27,13 @@
         <label for="lastname">Nachname:</label>
         <br>
         <input type="text" name="lastname" id="lastname">
+        <br>
+        <!--<label for="time">Zeit:</label>
+        <br>
+        <input type="text" name="time" id="time">-->
     </form>
 
-    <a href="score.html"><button>Registrieren</button></a><br>
+    <button id="safePlayerButton">Speichern</button>
 </body>
 
 </html>
