--- a/Endabgabe/html/admin.html
+++ b/Endabgabe/html/admin.html
@@ -23,7 +23,7 @@
     <h2>Für die Verwaltung der Karten-Bilder:</h2>
     <p>Du kannst Bilder aus der Datenbank löschen, oder neue mit einem URL-Link hinzufügen.</p>
     <p>Ein GIS-Meme für zwischendurch findest du <a is="memeLink"
-            href="https://github.com/benjamin-maier/GIS-SoSe2021">hier</a>.</p>
+            href="https://imgflip.com/i/5fzgw2">hier</a>.</p>
 
     <form id="addPicture">
         <label for="pictureOrigin">URL:</label>
