--- a/Endabgabe/html/game.html
+++ b/Endabgabe/html/game.html
@@ -6,16 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/style.css" rel="stylesheet" type="text/css" media="screen" />
+
     <!--Die folgenden Zeile ist Fremd-Code und stammt von: https://www.w3schools.com/css/css_font_google.asp-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Darker+Grotesque" />
     <!--Ende Fremd-Code-->
+
     <script src="../client/game.js" defer></script>
     <title id="game-html">Game</title>
 </head>
 
 <body id="html-game">
-    <a href="index.html"><img id="home-button" src="../media/house.svg" alt="Home-Button"></a>
+    <img id="home-button" src="../media/house.svg" alt="Home-Button">
+
     <h1 id="h1Game">Let's Memory!</h1>
     <h2 id="h2Game">Finde schnellstmöglich alle Karten-Paare!</h2>
 
