--- a/Endabgabe/html/index.html
+++ b/Endabgabe/html/index.html
@@ -5,25 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../css/style.css" rel="stylesheet" type="text/css" media="screen"/>
+    <link href="../css/style.css" rel="stylesheet" type="text/css" media="screen" />
+
     <!--Die folgenden Zeile ist Fremd-Code und stammt von: https://www.w3schools.com/css/css_font_google.asp-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Darker+Grotesque"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Darker+Grotesque" />
     <!--Ende Fremd-Code-->
-    <script src="../client/client.js" defer></script>
+
+    <script src="../client/home.js" defer></script>
     <title>Home</title>
 </head>
 
 <body id="html-home">
     <h1>The Memory-Page</h1>
     <h2>Deine Seite, um Online Memory zu spielen!</h2>
+    <h2>Wichtig: Beim Spielen dürfen immer nur 2 Karten gleichzeitig umgedreht werden!</h2>
+
     <p>Navigiere dich mit den untenstehenden Buttons zu den Seiten.</p>
     <p>Zurück kommst du jederzeit über das Haus-Symbol.</p>
     <h2>Viel Spass!</h2>
 
-    <a href="game.html"><button>Spiel Starten</button></a><br>
-    <a href="score.html"><button>Scores anzeigen</button></a><br>
-    <a href="admin.html"><button>Zum Admin-Bereich</button></a>
+    <button id="playTheGameButton">Spiel Starten</button><br>
+    <button id="goToScoresButton">Scores anzeigen</button><br>
+    <button id="goToAdminButton">Zum Admin-Bereich</button>
 </body>
 
 </html>
