--- a/Endabgabe/html/registration.html
+++ b/Endabgabe/html/registration.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../css/style.css" rel="stylesheet" type="text/css" media="screen"/>
+    <link href="../css/style.css" rel="stylesheet" type="text/css" media="screen" />
+
     <!--Die folgenden Zeile ist Fremd-Code und stammt von: https://www.w3schools.com/css/css_font_google.asp-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Darker+Grotesque"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Darker+Grotesque" />
     <!--Ende Fremd-Code-->
-    <script src="../client/client.js" defer></script>
+
+    <script src="../client/registration.js" defer></script>
     <title id="registration-html">Registrierung</title>
 </head>
 
@@ -28,11 +30,12 @@
         <br>
         <input type="text" name="lastname" id="lastname">
         <br>
-        <!--<label for="time">Zeit:</label>
+        <label class="hiddenFormulare" for="time">Zeit:</label>
         <br>
-        <input type="text" name="time" id="time">-->
+        <input class="hiddenFormulare" type="number" name="time" id="time">
     </form>
 
+    <button id="skipToScoreButton">Überspringen</button><br>
     <button id="safePlayerButton">Speichern</button>
 </body>
 
