--- a/Endabgabe/html/admin.html
+++ b/Endabgabe/html/admin.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Darker+Grotesque" />
     <!--Ende Fremd-Code-->
+    <!-- Die folgenden Zeilen sind Fremdcode und stammen wie die favicon-Dateien selbst von: https://favicon.io/favicon-converter/-->
+    <link rel="apple-touch-icon" sizes="180x180" href="../media/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../media/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../media/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="../media/favicon_io/site.webmanifest">
+    <!-- Ende Fremd-Code-->
 
     <script src="../client/client.js" defer></script>
     <title id="admin_html">Admin-Bereich</title>
