--- a/Endabgabe/html/registration.html
+++ b/Endabgabe/html/registration.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Darker+Grotesque" />
     <!--Ende Fremd-Code-->
+    <!-- Die folgenden Zeilen sind Fremdcode und stammen wie die favicon-Dateien selbst von: https://favicon.io/favicon-converter/-->
+    <link rel="apple-touch-icon" sizes="180x180" href="../media/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../media/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../media/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="../media/favicon_io/site.webmanifest">
+    <!-- Ende Fremd-Code-->
 
     <script src="../client/registration.js" defer></script>
     <title id="registration-html">Registrierung</title>
@@ -20,6 +26,7 @@
     <h1>Wie heißt du?</h1>
     <p>Gib uns doch noch schnell deinen Namen.</p>
     <p>Dann können wir dich in die Highscore-Liste eintragen!</p>
+    <p>Wenn du nicht in die Liste möchtest, klicke auf "überspringen"!</p>
 
     <form id="registrationForm">
         <label for="firstname">Vorname:</label>
